# aoc-2023

./: CMakeLists.txt  DAY1.C  DAY1.PRJ  Day1  Day2  INPUT.C  INPUT.H  MACROS.H  README.md  STRTOOLS.C  STRTOOLS.H  TIMER.C  TIMER.H  day1.c  day1.txt  day10.c  day11.c  day2.c  day2.prj  day3.c  day3.prj  day4.c  day4.prj  day5.c  day5.prj  day6.c  day6.prj  day7.c  day8.c  day9.c  input.c  input.h  macros.h  parser.c  parser.h  strtools.c  strtools.h  timer.c  vector.c  vector.h
day1/: input.txt  main.c
utils/: input.c  input.h  macros.h  strtools.c  timer.c  timer.h
