cmake_minimum_required(VERSION 3.26)
project(aoc-2023 C)

set(CMAKE_C_STANDARD 90)

add_executable(day1 day1.c input.c strtools.c timer.c)
add_executable(day2 day2.c input.c strtools.c timer.c)
add_executable(day3 day3.c input.c strtools.c timer.c)
add_executable(day4 day4.c input.c strtools.c timer.c parser.c)
add_executable(day5 day5.c input.c strtools.c timer.c vector.c)
add_executable(day6 day6.c input.c strtools.c timer.c)
add_executable(day7 day7.c input.c strtools.c timer.c)
add_executable(day8 day8.c input.c strtools.c timer.c)
add_executable(day9 day9.c input.c strtools.c timer.c)
add_executable(day11 day11.c input.c strtools.c timer.c)
